--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container bg-warning text-black text-center p-5 my-5">
+<div class="container text-center p-5 my-5">
+    <div class="col-sm bg-warning text-black p-3">
         <h1>Responsive Design</h1>
         <p>This is my first responsive Design</p>
         <p>And I'm sure after I learn this the sky's the limit!</p>
         <p>We may even conquer the world. Only time will tell!</p> 
-        <h1 style="padding-bottom:1rem">Typography</h1>
+        <h1>Typography</h1>
         <a href="#" class="text-decoration-none">This is a big ass line with no underline to it but it is a link gyaaa</a>
         <abbr title="Graphical User Interface" class="initialism">GUI</abbr>
-        <h1 class="text-success p-2">This may work</h1>
+        <h1 class="text-success">This may work</h1>
         <ul class="list-inline">
             <li class="list-inline-item">James</li>
             <li class="list-inline-item">McAffery</li>
@@ -24,5 +25,6 @@
             <li class="list-inline-item">Hershey's</li>
         </ul>
     </div>
+</div>
 </body>
 </html>
