--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <style>
+body{
+    margin:0 auto;
+}
+.double-click-zoom{
+    touch-action: manipulation;
+}
 .col-sm{
     min-width:150px;
+}
+@media (max-width:576px){
+    .double-click-zoom{
+        zoom:200%;
+    }
 }
 </style>
 </head>
 <body>
-<div class="container text-center p-5 my-5">
+<div class="container double-click-zoom text-center p-5 my-5">
     <div class="col-sm bg-warning text-black p-3">
         <h1>Responsive Design</h1>
         <p>This is my first responsive Design</p>
