--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body{
 .col-sm{
     min-width:150px;
 }
-@media (max-width:576px){
+@media (max-width:768px){
     .double-click-zoom{
         zoom:200%;
     }
@@ -24,8 +24,8 @@ body{
 </style>
 </head>
 <body>
-<div class="container double-click-zoom text-center p-5 my-5">
-    <div class="col-sm bg-warning text-black p-3">
+<div class="container text-center p-5 my-5">
+    <div class="col-sm double-click-zoom bg-warning text-black p-3">
         <h1>Responsive Design</h1>
         <p>This is my first responsive Design</p>
         <p>And I'm sure after I learn this the sky's the limit!</p>
