--- a/index.html
+++ b/index.html
@@ -10,22 +10,14 @@
 body{
     margin:0 auto;
 }
-.double-click-zoom{
-    touch-action: manipulation;
-}
 .col-sm{
-    min-width:150px;
-}
-@media (max-width:768px){
-    .double-click-zoom{
-        zoom:200%;
-    }
+    min-width:155px;
 }
 </style>
 </head>
 <body>
 <div class="container text-center p-5 my-5">
-    <div class="col-sm double-click-zoom bg-warning text-black p-3">
+    <div class="col-sm bg-warning text-black p-3">
         <h1>Responsive Design</h1>
         <p>This is my first responsive Design</p>
         <p>And I'm sure after I learn this the sky's the limit!</p>
