--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body{
 </style>
 </head>
 <body>
-<div class="container text-center p-5 my-5">
+<div class="container text-center my-5">
     <div class="col-sm bg-warning text-black p-3">
         <h1>Responsive Design</h1>
         <p>This is my first responsive Design</p>
