--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <style>
 body{
     margin:0 auto;
-    height:100vh;
 }
 .col-sm{
     min-width:155px;
@@ -21,6 +20,7 @@ body{
         <source src="zin.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
+
 <div class="container text-center pt-5 my-5">
     <div class="col-sm bg-warning text-black p-3">
         <h1>Responsive Design</h1>
@@ -40,23 +40,13 @@ body{
     </div>
 </div>
 <script>
-// Get the audio element
 var audio = document.getElementById('backgroundAudio');
 
-// Function to play the audio when the user scrolls
-function playAudioOnScroll() {
-    // Check if the audio is not already playing
-    if (audio.paused) {
-        // Play the audio
-        audio.play();
-        
-        // Remove the scroll event listener to prevent multiple autoplay triggers
-        window.removeEventListener('scroll', playAudioOnScroll);
-    }
+function playAudioOnBodyInteraction() {
+    audio.play();
 }
-
-// Add scroll event listener to trigger autoplay
-window.addEventListener('scroll', playAudioOnScroll);
+document.addEventListener('touchstart', playAudioOnBodyInteraction);
+document.addEventListener('click', playAudioOnBodyInteraction);
 </script>
 </body>
 </html>
